# ToDoList

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
data/: tasks.json
include/: FileStorage.h  Localization.h  Task.h  TaskManager.h  stdafx.h
include/cxxopts/: cxxopts.hpp
src/: Localization.cpp  main.cpp
src/todo/: FileStorageJSON.cpp  Task.cpp  TaskManager.cpp
